objects/Opportunity/fields/Expected_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Launch_Date__c</fullName>
    <description>WAMCRM : user manually book the initial close date for planning purpose</description>
    <label>Expected Launch Date</label>
    <type>Date</type>
</CustomField>