objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>WAMCRM : 2 Opportunity Type</description>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing Product</fullName>
            </value>
            <value>
                <fullName>New Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>