objects/Opportunity/fields/Sales_Est_by_Calendar_Year__c.field-meta.xml
<CustomField>
    <fullName>Sales_Est_by_Calendar_Year__c</fullName>
    <description>WAMCRM : Sales Est by Calendar Year ( User input)</description>
    <label>Sales Est by Calendar Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>