objects/Opportunity/fields/Sales_Est_in_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Sales_Est_in_12_Months__c</fullName>
    <description>WAMCRM : Sales Est in 12 Months (user manually input)</description>
    <label>Sales Est in 12 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>