objects/Opportunity/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>WAMCRM : Start Date for Opportunity</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>