objects/Opportunity/recordTypes/WAM.recordType-meta.xml
<RecordType>
    <fullName>WAM</fullName>
    <active>true</active>
    <businessProcess>WAM Sales Process</businessProcess>
    <description>WAMCRM : Record Type</description>
    <label>WAM</label>
</RecordType>