objects/Opportunity/listViews/All_Opportunities_Partnership.listView-meta.xml
<ListView>
    <fullName>All_Opportunities_Partnership</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.WAM</value>
    </filters>
    <label>All Opportunities (Partnership)</label>
    <sharedTo>
        <role>System_Administrator</role>
        <roleAndSubordinatesInternal>WAM_Management</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>